# nb-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  common.nix  rustdoc-endpoints.json  shell.nix  thor-config.nix  utils.nix
.cargo/: config.toml
examples/: download.rs  download_gif.rs  download_url.rs  from_local_neko.rs  from_local_nekos.rs  get_blocking.rs  get_with_client.rs  gif_details.rs  gif_details_from_url.rs  neko_details.rs  neko_details_from_url.rs  nekos_details.rs  nekos_details_from_url.rs  search.rs  search_timeout.rs  simple.rs  simple_neko.rs  strong_get_gif.rs  strong_get_nekos.rs  strong_search.rs  with_amount.rs  with_amount_0.rs  with_amount_1.rs
nb-blocking-util/: Cargo.toml  README.md
nb-blocking-util/src/: lib.rs
nix/: overlays.nix
src/: async_impl.rs  blocking_impl.rs  category.rs  client.rs  details.rs  download.rs  impl.rs  lib.rs  local.rs  metrics.rs  response.rs  strong_types.rs  strong_types_impl.rs
tests/: get_image_details_from_url.rs  get_image_details_from_url_not_nekos.rs  try_metrics.rs
