[package]
name = "nekosbest"
description = "nekos.best API wrapper"
version = "0.8.1"
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/dblanovschi/nb-rs"
readme = "README.md"

[package.metadata.docs.rs]
features = ["local"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

local = ["rand"]
metrics = ["humantime-serde"]

[dependencies]
reqwest = { version="0.11", default-features=false, features=["json"] }
thiserror = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1"
urlencoding = "2"

[dependencies.humantime-serde]
version = "1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
tokio = { version="1", features=["full"] }

[build-dependencies]
tokio = { version="1", features=["full"] }
reqwest = { version="0.11", default-features=false, features=["json", "rustls-tls"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
quote = { version="1", features=[] }
proc-macro2 = "1"

[[example]]
name = "from_local_nekos"
path = "examples/from_local_nekos.rs"
required-features = ["local"]

[[test]]
name = "try_metrics"
path = "tests/try_metrics.rs"
required-features = ["metrics"]
