[package]
name = "nekosbest"
description = "nekos.best API wrapper"
version = "0.14.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/dnbln/nb-rs"
readme = "README.md"

[package.metadata.docs.rs]
features = ["local"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls", "strong-types"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

local = ["rand"]
metrics = ["humantime-serde"]
blocking = ["reqwest/blocking", "nb-blocking-util"]

strong-types = []

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "1"
serde_json = "1"
urlencoding = "2"

[dependencies.humantime-serde]
version = "1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.nb-blocking-util]
version = "0.10.1"
optional = true
path = "./nb-blocking-util"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = { version = "1", features = [] }
proc-macro2 = "1"

[[example]]
name = "from_local_nekos"
path = "examples/from_local_neko.rs"
required-features = ["local"]

[[example]]
name = "strong_get_nekos"
path = "examples/strong_get_nekos.rs"
required-features = ["strong-types"]

[[example]]
name = "strong_get_gif"
path = "examples/strong_get_gif.rs"
required-features = ["strong-types"]

[[test]]
name = "try_metrics"
path = "tests/try_metrics.rs"
required-features = ["metrics"]

[workspace]
members = ["nb-blocking-util"]
