[package]
name = "nekosbest"
description = "nekos.best API wrapper"
version = "0.21.1"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/dnbln/nb-rs"
readme = "README.md"
include = ["/examples", "/tests", "/src", "/Cargo.toml", "/LICENSE", "/README.md", "/CHANGELOG.md"]

[package.metadata.docs.rs]
features = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

metrics = ["humantime-serde"]
blocking = ["reqwest/blocking", "nb-blocking-util"]

strong-types = []
download = ["image", "futures", "reqwest/stream"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2"
serde_json = "1"
urlencoding = "2"
tokio = "1"
chrono = "0.4.23"

[dependencies.humantime-serde]
version = "1"
optional = true

[dependencies.nb-blocking-util]
version = "0.10.1"
optional = true
path = "./nb-blocking-util"

[dependencies.image]
version = "0.24.6"
optional = true

[dependencies.futures]
version = "0.3.28"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "get_blocking"
path = "examples/get_blocking.rs"
required-features = ["blocking"]

[[example]]
name = "strong_get_nekos"
path = "examples/strong_get_nekos.rs"
required-features = ["strong-types"]

[[example]]
name = "strong_get_gif"
path = "examples/strong_get_gif.rs"
required-features = ["strong-types"]

[[example]]
name = "strong_search"
path = "examples/strong_search.rs"
required-features = ["strong-types"]

[[example]]
name = "download"
path = "examples/download.rs"
required-features = ["download"]

[[example]]
name = "download_url"
path = "examples/download_url.rs"
required-features = ["download"]

[[example]]
name = "download_gif"
path = "examples/download_gif.rs"
required-features = ["download"]

[[test]]
name = "try_metrics"
path = "tests/try_metrics.rs"
required-features = ["metrics"]

[workspace]
members = ["nb-blocking-util"]
